Refactoring to observables.