@@ -18,11 +18,11 @@ repositories {
 
 javafx {
     version = "12"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base' ]
 }
 
-//mainClassName = 'org.ringingmaster.ui.desktop.HelloFX'
 mainClassName = 'org.ringingmaster.ui.desktop.RingingMasterDesktopApp'
+applicationDefaultJvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
 
 
 dependencies {
@@ -36,8 +36,9 @@ dependencies {
     compile 'org.springframework:spring-context:4.3.10.RELEASE'
 
     // Other
-    compile 'org.controlsfx:controlsfx:8.40.10'
-    
+    compile 'org.controlsfx:controlsfx:11.0.0'
+    compile 'org.apache.commons:commons-lang3:3.9'
+
     // Logging
     runtime 'org.apache.logging.log4j:log4j-core:2.8.2'
     runtime 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
